site: fixed remove padding on body add bobbom padding on html remove overflow style at project-page-wrap class and tab-content class

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -517,7 +517,6 @@
 
 .project-page-wrap {    
     margin:30px 0;
-    overflow:auto;
     padding:0 40px 0 160px;
     position: relative;
     min-height:580px;
@@ -537,6 +536,10 @@
 
             }
         }
+    }
+
+    .tab-content {
+        overflow:visible;
     }
 }
 
